Add check bot command and project organization improvements
- Add 'check bot' command to poll Telegram and output updates as JSON
- Create .bin/ directory for compiled binaries
- Update .gitignore to exclude .bin/
- Update Taskfile.yml with check-bot task
- Create .env.example with required environment variables
- Improve main.go with check command structure

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,14 +2,20 @@ version: '3'
 
 tasks:
   build:
-    desc: Build the binary
+    desc: Build the binary to .bin/
     cmds:
-      - go build -o telegram-nats-bridge .
+      - mkdir -p .bin
+      - go build -o .bin/telegram-nats-bridge .
 
   run:
     desc: Run for development
     cmds:
       - go run . run
+
+  check-bot:
+    desc: Check bot and print updates as JSON
+    cmds:
+      - go run . check bot
 
   test:
     desc: Run tests
