Add LOG_LEVEL environment variable and VS Code debug configuration
- Add getLogLevel() function to parse LOG_LEVEL env variable
- Support DEBUG, INFO, WARN, ERROR log levels (defaults to WARN)
- Update runBridge and checkBot to use LOG_LEVEL from env
- Add LOG_LEVEL to .env and .env.example
- Create .vscode/launch.json with debug configurations for check bot and run commands
- Remove SetLogger(nil) from telegram_client to prevent panic
- Fix graceful shutdown to return nil instead of error on context cancellation

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ TELEGRAM_BOT_TOKEN=your_bot_token_here
 # NATS Configuration
 NATS_URL=nats://localhost:4222
 NATS_CREDENTIALS=/path/to/nats.creds
+
+# Logging (DEBUG, INFO, WARN, ERROR)
+LOG_LEVEL=WARN
