feat: add NATS integration with simplified config and Update type
- Add nats_client.go with Connect/Publish/Close methods and reconnect options
- Add config.go with viper-based config loading (subject from YAML, token/URL from env or YAML)
- Update Update type from struct to map[string]any for flexibility
- Modify GetUpdates to return next offset directly (max update_id + 1)
- Use json.Number for update_id to preserve integer precision
- Add --config flag to run and check bot commands
- Update Taskfile.yml and VSCode launch.json with config flag
- Add config.yaml and config.example.yaml
- Add comprehensive tests for NATS client and config
- Update AGENTS.md with actual implementation details

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}",
-      "args": ["check", "bot"],
+      "args": ["check", "bot", "--config", "config.yaml"],
       "envFile": "${workspaceFolder}/.env",
       "console": "integratedTerminal"
     },
@@ -17,7 +17,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}",
-      "args": ["run"],
+      "args": ["run", "--config", "config.yaml"],
       "envFile": "${workspaceFolder}/.env",
       "console": "integratedTerminal"
     }
