refactor: remove docker-compose.example.yaml, use single compose file
- Remove duplicate docker-compose.example.yaml
- Update Taskfile to use docker-compose.yaml directly
- Update AGENTS.md documentation

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -32,9 +32,9 @@ tasks:
   nats-up:
     desc: Start NATS server with Docker Compose
     cmds:
-      - docker compose -f docker-compose.example.yaml up -d
+      - docker compose up -d
 
   nats-down:
     desc: Stop NATS server
     cmds:
-      - docker compose -f docker-compose.example.yaml down
+      - docker compose down
