chore: ignore config.yaml, keep only config.example.yaml in repo
- Add config.yaml to .gitignore (local config should not be committed)
- Remove config.yaml from git index (file remains in working directory)
- Update AGENTS.md with new task command format (nats-box)
- Only config.example.yaml is tracked in repository

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ go.work.sum
 # Plans directory
 .plans/
 
+# Local config (use config.example.yaml as template)
+config.yaml
+
 # Editor/IDE
 # .idea/
 # .vscode/
