--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -24,17 +24,8 @@ tasks:
     cmds:
       - go test ./...
 
-  nats-sub:
+  nats-box:
     desc: Subscribe to NATS subject (requires running nats container)
     cmds:
-      - docker run --rm -it --network host natsio/nats-box nats sub telegram.updates
+      - docker run --rm -it --network host natsio/nats-box
 
-  nats-up:
-    desc: Start NATS server with Docker Compose
-    cmds:
-      - docker compose up -d
-
-  nats-down:
-    desc: Stop NATS server
-    cmds:
-      - docker compose down
