feat: add expr-based message routing with routes configuration
- Replace single subject config with routes-based routing system
- Add support for 'first' and 'all' routing modes
- Add expr language support for conditions and dynamic subjects
- Add router.go with expr compilation and routing logic
- Update config types: Route, RouteSubject, RouteSubjectType
- Update config tests for new structure
- Add .draft/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ go.work.sum
 # Plans directory
 .plans/
 
+# Drafts
+.draft/
+
 # Local config (use config.example.yaml as template)
 config.yaml
 
