--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,6 +1,33 @@
 # Example configuration file for telegram-nats-bridge
-# Required: NATS subject for publishing updates (only from YAML, not from env)
-subject: telegram.updates
+
+# Mode: "first" - send to first matched route's subject
+#        "all"  - send to all matched routes' subjects
+mode: "first"
+
+# Routes for message routing
+# Each route has:
+#   condition: expr condition (returns bool)
+#   subject: destination subject
+#     type: "string" (static) or "expr" (dynamic)
+#     value: subject string or expr program
+routes:
+  # Route all messages to telegram.messages
+  - condition: "update.message != nil"
+    subject:
+      type: "string"
+      value: "telegram.messages"
+
+  # Route callback queries to telegram.callbacks
+  - condition: "update.callback_query != nil"
+    subject:
+      type: "string"
+      value: "telegram.callbacks"
+
+  # Dynamic subject example: send to user-specific topic
+  # - condition: "update.message != nil"
+  #   subject:
+  #     type: "expr"
+  #     value: "sprintf(\"telegram.%d.messages\", update.message.from.id)"
 
 # Optional: Telegram bot token (can also be set via TELEGRAM_BOT_TOKEN env)
 # telegram_token: "your-bot-token"
